--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.2.0"
 recyclerview = "1.3.1"
 glide = "4.16.0"
 lifecycle = "2.8.7"
+jreleaser = "1.16.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,4 +31,5 @@ lifecycle = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+jreleaser = { id = "org.jreleaser", version.ref = "jreleaser" }
 
