--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,4 +32,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 jreleaser = { id = "org.jreleaser", version.ref = "jreleaser" }
-
+maven-publish = { id = "maven-publish" }
+signing = { id = "signing" }
